# pdfstudio

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pdfstudio.py  pyproject.toml
pdfstudio/: __init__.py  __main__.py  automation.py  classify.py  cli.py  diff.py  disarm.py  extract.py  flags.py  graphviz_out.py  hexview.py  hunt.py  layout.py  magic.py  malformed.py  model.py  objstm.py  parity.py  parser.py  pdfid_view.py  rects_svg.py  recursive.py  search.py  shell.py  tui.py  walk_view.py  walker.py  xrefstream.py  yara_scan.py
pdfstudio/render/: __init__.py  html.py  text.py
tests/: conftest.py  test_automation.py  test_flags.py  test_parser.py  test_parser_robust.py
